[package]
name = "rust_programs"
version = "0.1.0"
edition = "2021"
authors = ["Alain  <zhengze01@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "1.4.0", features = ["std", "derive"] }
solana-program = "=1.18.9"
thiserror = "1.0.58"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]
