[package]
name = "rust_programs"
version = "0.1.0"
edition = "2021"
authors = ["Alain  <zhengze01@gmail.com>", "KZGAO <gph13911138748@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "1.4.0", features = ["std", "derive"] }
mpl-token-metadata = "4.1.2"
solana-program = "1.18.9"
spl-associated-token-account = {version = "3.0.2", features = [ "no-entrypoint" ]}
spl-token = {version = "4.0.1", features = [ "no-entrypoint" ]}
thiserror = "1.0.58"




[lib]
crate-type = ["cdylib", "lib"]
